--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-printer-applet (4:4.8.4-0r1) UNRELEASED; urgency=low
+printer-applet (4:4.8.4-1) unstable; urgency=low
 
-  [ Pino Toscano ]
+  * Team upload.
   * Initial packaging, split from kdeutils.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 26 Jun 2012 18:46:31 +0200
+ -- Pino Toscano <pino@debian.org>  Tue, 26 Jun 2012 20:00:33 +0200
